--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -6,7 +6,7 @@
     <title>Nikhil Interiors - Transform Your Space</title>
     <link rel="stylesheet" href="/styles/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header class="header">
@@ -34,8 +34,8 @@
                 <h2>Transform Your Space</h2>
                 <p>We create stunning interiors for residential and commercial spaces in Mumbai and Navi Mumbai. From concept to completion, we handle every aspect of your dream interior.</p>
                 <div class="hero-buttons">
-                    <a href="#contact" class="btn btn-primary">Get a Quote</a>
-                    <a href="#portfolio" class="btn btn-secondary">View Our Work</a>
+                    <a href="/pricing-calculator" class="btn btn-primary">Get Quote</a>
+                    <a href="#contact" class="btn btn-secondary">Contact Us</a>
                 </div>
             </div>
         </div>
